/*
 * Copyright (C) 2021 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package com.google.companionprotos;

option java_package = "com.google.android.companionprotos";

option java_multiple_files = true;

// Potential states of the verification code.
enum VerificationCodeState {
  VERIFICATION_CODE_STATE_UNKNOWN = 0;

  // OOB transfer was successful and verification will be performed on the
  // encrypted value.
  OOB_VERIFICATION = 1;

  // OOB transfer did not take place and the code should be visually displayed
  // to the user.
  VISUAL_VERIFICATION = 2;

  // The visual code has been confirmed by the user.
  VISUAL_CONFIRMATION = 3;
}

// Message used to verify the security handshake.
message VerificationCode {
  // State of verification code on the phone.
  VerificationCodeState state = 1;

  // Payload containing encrypted verification code if state is
  // OOB_VERIFICATION. Otherwise empty.
  bytes payload = 2;
}

